# E-BUY

./: db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py
base/: models.py  tests.py
base/migrations/: 0001_initial.py
base/urls/: user_urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/css/: bootstrap.css  style.css
frontend/src/:  Homepage.js  App.css  App.js  Homepage.js  index.css
frontend/src/components/: Footer.js  Header.js  Paginate.js  Product.js  SearchBox.js  about.js  contact.js  gallery.js  header.js  image.js  services.js
frontend/src/data/: data.json
frontend/src/screens/: HomeScreen.js  PaymentScreen.js  ProductListScreen.js  ProductScreen.js
