[tool.poetry]
name = "e-buy"
version = "0.1.0"
description = ""
authors = ["YousefAbu-Jalboush <yousef.y.jalboush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-cors-headers = "^3.9.0"
django-storages = "^1.11.1"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.8.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
